# DrokBot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  drizzle.config.ts  memory.md  package.json  svelte.config.js
.github/workflows/: release-native-builds.yml
docs/: features.md  future.md  plan.md
drizzle/: 0000_striped_skullbuster.sql  0002_rich_the_spike.sql  0003_giant_jubilee.sql  0004_redundant_wolverine.sql  0006_remarkable_gauntlet.sql  0008_windy_ink.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0008_snapshot.json  _journal.json
scripts/: create-db.ts  tmp-check-ask-user.mjs
src/: app.d.ts  app.html  hooks.server.ts  service-worker.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/: db.server.ts
src/lib/activity/: activity.remote.ts  activity.schema.ts  activity.server.ts  emit.ts  index.ts
src/lib/agents/: agents.remote.ts  agents.schema.ts  agents.server.ts  engine.ts  index.ts  inline-subagent.ts  runs.remote.ts  scheduler.ts  streaming-state.server.ts  subagent.ts
src/lib/artifacts/: artifacts.remote.ts  artifacts.schema.ts  index.ts
src/lib/auth/: auth.remote.ts  auth.schema.ts  auth.server.ts  auth.ts  index.ts  passkey.server.ts
src/lib/chat/: AskUserModal.svelte  AskUserQuestionCard.svelte  index.ts  (+10 more)
src/routes/: +layout.svelte  +page.svelte  layout.css
static/: manifest.json
tests/: auth.spec.ts  chat.live.spec.ts  chat.spec.ts  dashboard.spec.ts  external-integrations.spec.ts  helpers.ts  pwa.spec.ts  settings.spec.ts  visual.spec.ts
(+138 files in other folders)
